# backend/docs/swagger.json
@@ -1400,6 +1400,9 @@
         "github_com_raulaguila_go-api_internal_core_dto.RoleInput": {
             "type": "object",
             "properties": {
+                "enabled": {
+                    "type": "boolean"
+                },
                 "name": {
                     "type": "string",
                     "maxLength": 100,
@@ -1416,6 +1419,9 @@
         "github_com_raulaguila_go-api_internal_core_dto.RoleOutput": {
             "type": "object",
             "properties": {
+                "enabled": {
+                    "type": "boolean"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -1460,9 +1466,6 @@
         "github_com_raulaguila_go-api_internal_core_dto.UserOutput": {
             "type": "object",
             "properties": {
-                "corp_id": {
-                    "type": "string"
-                },
                 "email": {
                     "type": "string"
                 },
@@ -1475,6 +1478,12 @@
                 "new": {
                     "type": "boolean"
                 },
+                "permissions": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "roles": {
                     "type": "array",
                     "items": {
@@ -1483,6 +1492,9 @@
                 },
                 "status": {
                     "type": "boolean"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
